# Data_Analize_Govorov-9

./: README.md  environment.yml  requirements.txt  setup.cfg
individual/: ind.py
