[metadata]
name = my_package
version = 1.0.0
author = Egor
author_email = egor300404@email.com
description = A short description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Artorias1469?tab=repositories
license = MIT

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    my_command = my_package.module:main
